# agent-memory

./: .claude-skill.json  .gitignore  FILE-MANIFEST.txt  README.md  RESEARCH-SUMMARY.md  config.example.yaml  obsidian-plugin-development-comprehensive-research.md  obsidian-plugin-implementation-checklist.md  pyproject.toml
.claude/session-state/: latest.md
.claude/session-state/archive/: 20260316-2205.md  20260316-2206.md  20260317-1056.md  20260317-1108.md
.github/workflows/: ci.yml
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
docs/journals/: 260316-red-team-review-agent-memory-plan.md
plans/260316-agent-memory-mcp-server/: COMPLETION_REPORT.md  phase-01-project-setup.md  phase-02-storage-layer.md  phase-03-embedding-providers.md  phase-04-mcp-server-tools.md  phase-05-consolidation-engine.md  phase-06-file-ingestion.md  phase-07-mcp-resources-transport.md  phase-08-dashboard-agent-skill.md  phase-09-testing-docs.md  phase-10-open-source-packaging.md  plan.md
plans/260316-agent-memory-mcp-server/reports/: code-review-report.md
plans/reports/: researcher-agent-memory-systems.md
scripts/: setup-client.sh
skills/agent-memory/: SKILL.md
skills/agent-memory/references/: memory-patterns.md
src/agent_memory/: __init__.py  __main__.py  config.py  http_client.py  models.py  server.py
tests/: conftest.py  test_config.py  test_consolidation.py  test_embedding.py  test_ingestion.py  test_server.py  test_storage.py  test_vault.py  test_vault_security.py
(+16 files in other folders)
